# cpp-kafka

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  SYSTEM_OVERVIEW.md  build.sh  check_deps.cpp  docker-compose.yaml  fix-denpendencies.sh  quick-dependencies.sh
config/: config-env.yaml  config.yaml
flatbuffers/: orderbook.fbs
include/: KafkaConsumer.hpp  KafkaProducer.hpp  KafkaPush.hpp  MarketDepthProcessor.hpp  MessageFactory.hpp  OrderBook.hpp  OrderBookTypes.hpp  orderbook_generated.h
src/: KafkaConsumer.cpp  KafkaProducer.cpp  MarketDepthProcessor.cpp  MessageFactory.cpp  OrderBook.cpp  OrderBookTypes.cpp  main.cpp
